--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon ."
   },
   "dependencies": {
-    "@prisma/client": "4.14.0",
+    "@prisma/client": "^4.14.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -16,7 +16,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.1.5",
-    "prisma": "^4.14.0",
+    "prisma": "^4.14.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
