--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.7",
+    "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
