--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "tailwind-scrollbar": "^3.0.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
